force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/AVO_Process_State_Transition_Stopper__c.object-meta.xml
<CustomObject>
    <label>Process State Transition Stopper</label>
    <nameField>
        <displayFormat>TT-{00000}</displayFormat>
        <label>Transition Condition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process State Transition Stoppers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>