force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/fields/Avo_Deposit_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Deposit_Type__c</fullName>
    <label>Deposit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Deposits</fullName>
            </value>
            <value>
                <fullName>Any Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>