force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/fields/Avo_Inspection_Result__c.field-meta.xml
<CustomField>
    <fullName>Avo_Inspection_Result__c</fullName>
    <label>Inspection Result</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Inspection_Result</valueSetName>
    </valueSet>
</CustomField>