force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/fields/Avo_Milestone_Completed_Action__c.field-meta.xml
<CustomField>
    <fullName>Avo_Milestone_Completed_Action__c</fullName>
    <label>Milestone Completed Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Milestone_Completed_Actions</valueSetName>
    </valueSet>
</CustomField>