force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/fields/Avo_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Avo_Submission_Status__c</fullName>
    <label>Submission Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Submission_Status</valueSetName>
    </valueSet>
</CustomField>