force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/fields/Avo_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Type__c</fullName>
    <formula>text(Avo_Review_Type__c) +  text(Avo_Fee_Type__c) +  text(Avo_Inspection_Type__c) + text(Avo_Milestone_Name__c) + text(Avo_Submission_Type__c) + text(Avo_Deposit_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>