force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/recordTypes/Avo_Deposit_Condition.recordType-meta.xml
<RecordType>
    <fullName>Avo_Deposit_Condition</fullName>
    <active>true</active>
    <label>Deposit Condition</label>
</RecordType>