force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/recordTypes/Avo_Fee_Condition.recordType-meta.xml
<RecordType>
    <fullName>Avo_Fee_Condition</fullName>
    <active>true</active>
    <label>Fee Condition</label>
</RecordType>