force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/recordTypes/Avo_Inspection_Condition.recordType-meta.xml
<RecordType>
    <fullName>Avo_Inspection_Condition</fullName>
    <active>true</active>
    <label>Inspection Condition</label>
</RecordType>