force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/recordTypes/AVO_Review_Condition.recordType-meta.xml
<RecordType>
    <fullName>AVO_Review_Condition</fullName>
    <active>true</active>
    <label>Review Condition</label>
</RecordType>