force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/recordTypes/Milestone_Condition.recordType-meta.xml
<RecordType>
    <fullName>Milestone_Condition</fullName>
    <active>true</active>
    <label>Milestone Condition</label>
</RecordType>