force-app/main/default/objects/AVO_Process_State_Transition_Stopper__c/recordTypes/Submission_Condition.recordType-meta.xml
<RecordType>
    <fullName>Submission_Condition</fullName>
    <active>true</active>
    <label>Submission Condition</label>
</RecordType>